# muista

./: README.md  meson.build
.github/workflows/: c-cpp.yml
application/: application.cpp  main.cpp  meson.build
application/include/: application.hpp
application/include/models/: course_editor.hpp  course_list.hpp
application/models/: course_list.cpp
common/: course.cpp  dictionary.cpp  lesson.cpp  meson.build  module.cpp  word.cpp  word_tracker.cpp
dialogs/: create_course_dialog.cpp  meson.build
dialogs/ui/: create_course_dialog.ui
domain/: category.cpp  category_info.cpp  course.cpp  definition.cpp  dictionary.cpp  lesson.cpp  lesson_info.cpp  meson.build  reading_lesson.cpp  word.cpp  word_tracker.cpp
domain/include/: category.hpp  course.hpp  definition.hpp  dictionary.hpp  lesson.hpp  word.hpp  word_proficiency.hpp  word_track.hpp  word_tracker.hpp
include/: application.hpp  edit_course.hpp  main_window.hpp
include/common/: course.hpp  course_reader.hpp  dictionary.hpp  module.hpp  word.hpp  word_tracker.hpp
include/dialogs/: create_course_dialog.hpp
include/models/: course_list.hpp
include/screens/: course_editor_screen.hpp  start_screen.hpp
include/tests/: dictionary_test.hpp
include/widgets/: course_list_button.hpp
muista/: application.cpp  course_list_model.cpp  edit_course.cpp  main.cpp  main_window.cpp  meson.build
muista/ui/: edit_course_window.ui  main_window.ui
resources/: main.qml  meson.build  resources.qrc
resources/course_editor/: CourseEditorScreen.qml
resources/start_screen/: AddCourse.qml  CourseItem.qml  StartScreen.qml
screens/: course_editor_screen.cpp  meson.build  start_screen.cpp
screens/ui/: course_editor_screen.ui  course_screen.ui  start_screen.ui
tests/: dictionary.cpp  dictionary_test.cpp  main.cpp  meson.build  tests.hpp  word.cpp  word_tracker.cpp
widgets/: course_list_button.cpp  meson.build
widgets/ui/: course_list_button.ui  word_edit.ui
